# axon

./: .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml
src/axon/: __init__.py  cli.py  discovery.py  models.py  providers.py  registry.py  resolve.py  validator.py
src/axon/scanners/: __init__.py  config_files.py  env.py
src/axon/server/: __init__.py  app.py  egress.py  routes_anthropic.py  routes_openai.py
tests/: test_config_scanner.py  test_egress_security.py  test_env_scanner.py  test_models_security.py  test_resolve.py  test_server.py
