[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "axon-router"
version = "0.0.1"
description = "Local-first, capability-aware LLM router gateway with zero-config key auto-discovery"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
# Dependencies pinned with lower bounds; lockfile (requirements.txt) holds exact pins.
# Discovery engine (M0) intentionally depends ONLY on the stdlib + httpx + pyyaml +
# rich + typer to keep the dependency surface minimal (key-aggregating tool = attack target).
dependencies = [
    "httpx>=0.27,<1.0",
    "pyyaml>=6.0,<7.0",
    "rich>=13.7,<15.0",
    "typer>=0.12,<1.0",
]

[project.optional-dependencies]
# M1+ proxy/server stack — not needed for the M0 discovery CLI.
server = [
    "litellm>=1.81,<2.0",
    "fastapi>=0.115,<1.0",
    "uvicorn>=0.30,<1.0",
]
dev = [
    "pytest>=8.0,<9.0",
]

[project.scripts]
axon = "axon.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
